Fixed the Website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
   <!-- Header -->
   <header class="site-header">
-    <div class="logo"><strong>My Portfolio</strong></div>
+    <div class="logo">
+      <a href="#">
+        <strong>My Portfolio</strong>
+      </a>
+    </div>
     <nav>
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
@@ -55,7 +59,7 @@
               </div>
               <div class="author-deets">
                 <p class="author-name">Bjarne Stroustrup</p>
-                <div class="author-name-prefix">Author</div>
+                <p class="author-role">Author</p>
               </div>
             </div>
             <div class="tags">
@@ -82,7 +86,7 @@
               </div>
               <div class="author-deets">
                 <p class="author-name">Bjarne Stroustrup</p>
-                <div class="author-name-prefix">Author</div>
+                <div class="author-role">Author</div>
               </div>
             </div>
             <div class="tags">
@@ -99,18 +103,12 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hi, I'm John Carlo Santos, a software engineer passionate about 
-        creating clean, efficient, and scalable systems. I enjoy working 
-        on both low-level programming (C++) and web technologies.
-      </p>
-      <p>
-        When I'm not coding, you'll find me exploring new tech, writing 
-        about programming, or tinkering with side projects.
+        I designed and implemented the C++ programming language. To make C++ a stable and up-to-date base for real-world software development, I have stuck with its ISO standards effort for 30+ years (so far). I'm a professor of Computer Science in Columbia University in New York City. 
       </p>
     </section>
   </main>
 
-  <!-- Footer (Contact moved here) -->
+  <!-- Footer -->
   <footer id="footer">
     <h2>Contact</h2>
     <p>If you'd like to work together or just say hi:</p>
